tests/samples/invalid/comparison_on_arrays.pn
fn main() -> u8
{
	var result = 0;
	var x: []u8 = [2, 3];
	var y: []u8 = [2, 3];
	if x == y
	{
		result = 23;
	}
	return: result
}
